# home

./: .gitignore
alexa/: CMakeLists.txt
alexa/include/: alexa.hpp  alexa_server.hpp
alexa/include/exceptions/: alexa_exception.hpp  alexa_policy_exception.hpp  alexa_processing_exception.hpp
alexa/settings/: alexa_settings_template.json
alexa/src/: alexa.cpp  alexa_server.cpp  test.cpp
alexa/src/exceptions/: alexa_exception.cpp  alexa_policy_exception.cpp  alexa_processing_exception.cpp
lib/include/crc32/: crc32.hpp
lib/include/nlohmann/: adl_serializer.hpp  json.hpp
lib/include/nlohmann/detail/: exceptions.hpp
lib/include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
lib/src/aes/: aes.c
lib/src/crc32/: crc32.cpp
yatu/: .gitignore  CMakeLists.txt
yatu/include/: aes.hpp  device.hpp  light_bulb.hpp
yatu/include/exception/: device_exception.hpp
yatu/src/: device.cpp  light_bulb.cpp  test.cpp
yatu/src/exception/: device_exception.cpp
